# ai_projects

./: .gitignore  README.md  package-lock.json  package.json
01_chat/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  alembic.ini  diagrams.md  diagrams_call.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
01_chat/deploy/nginx/: nginx.conf
01_chat/migrations/: env.py
01_chat/migrations/versions/: 0001_initial_schema.py  0002_refresh_tokens.py  0003_user_auth_flags.py
01_chat/src/ai_chat/: __init__.py  app.py  bootstrap.py  config.py  dependencies.py  errors.py  limits.py  main.py
01_chat/src/ai_chat/adapters/: __init__.py
01_chat/src/ai_chat/observability/: logging.py
01_chat/src/ai_chat/persistence/: __init__.py  base.py  health.py  migrations.py  models.py  session.py
01_chat/src/ai_chat/repositories/: __init__.py  conversations.py  refresh_tokens.py  users.py
01_chat/src/ai_chat/services/: auth.py  chat.py  quota.py
01_chat/src/ai_chat/transport/: __init__.py
01_chat/tests/: conftest.py  support.py  test_app.py  test_auth.py  test_chat.py  test_deployment.py  test_migrations.py  test_providers.py  test_repositories.py  test_user_journeys.py
02_rag_knowledge_base/: .gitignore  README.md  diagrams.md  diagrams_call.md  pyproject.toml
02_rag_knowledge_base/docs/: rag_concepts_in_codebase.md
02_rag_knowledge_base/scripts/: generate_rag_concepts_doc.py
02_rag_knowledge_base/src/rag_knb/: __init__.py  __main__.py  cli.py  concepts_documentation.py  config.py  errors.py  library_policies.py  models.py  observability.py  optional_dependencies.py  pathing.py  runtime_options.py  service.py  service_factory.py
02_rag_knowledge_base/src/rag_knb/answers/: __init__.py  answer_results.py  answering.py  context_building.py  llm.py  prompt_injection.py
02_rag_knowledge_base/src/rag_knb/indexing/: __init__.py  chunking.py  embedding_lifecycle.py  loaders.py  storage.py
02_rag_knowledge_base/src/rag_knb/retrieval_engine/: __init__.py  embeddings.py  evaluation.py  query_rewriting.py  retrieval.py  vector_store.py
02_rag_knowledge_base/tests/: snapshot.py  test_answering.py  test_cli.py  test_concepts_documentation.py  test_config.py  test_embeddings.py  test_evaluation_harness.py  test_llm.py  test_loading_and_chunking.py  test_package.py  test_pathing.py  test_retrieval_regression.py  test_service_factory.py  test_service_retrieval.py  test_storage.py  test_vector_store.py
02_rag_knowledge_base/tests/fixtures/: evaluation_cases.json  semantic_retrieval_scenarios.json
02_rag_knowledge_base/tests/snapshots/: cli_ask_with_diagnostics.txt  retrieval_top_documents.json  storage_metadata.json
(+17 files in other folders)
