[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-knb"
version = "0.1.0"
description = "Local RAG knowledge base library with a CLI workflow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonlines>=4.0,<5.0",
    "pydantic-settings>=2.6,<3.0",
    "rapidfuzz>=3.9,<4.0",
    "rank-bm25>=0.2.2,<1.0",
    "rich>=13.7,<14.0",
    "typer>=0.12,<1.0",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-huggingface>=0.1",
    "langchain-text-splitters>=0.3",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "langchain>=0.3",
    "langchain-community>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.11",
]

[project.scripts]
rag-knb = "rag_knb.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
mypy_path = "src"
packages = ["auditpy"]
exclude = ["build", "tests/golden"]
